2001-12-11  Phil Edwards  <pme@gcc.gnu.org>

	* testsuite/ext/allocators.cc:  New file.

2001-12-11  Jason Merrill  <jason@redhat.com>

	* include/bits/locale_facets.tcc (_M_extract_int): Avoid
	uninitialized warning.

2001-12-11  Loren Rittle <ljrittle@acm.org>

	* config/cpu/sparc/sparc32/bits/atomicity.h
	(__Atomicity_lock<0>::_S_atomicity_lock): Add.

2001-12-10  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.tcc (_M_replace_safe):  Fix typos.
	* include/bits/basic_string.h:  Fix typos.

2001-12-10  Paolo Carlini  <pcarlini@unitus.it>
            Nathan Myers  <ncm@cantrip.org>

	* include/bits/basic_string.tcc (_M_replace_safe):  New function.
	(_M_replace(input_iterator_tag), append members):  Use it.
	(_M_replace(forward_iterator_tag)):  Remove.
	* include/bits/basic_string.h:  Adjust declarations.
	* src/string-inst.cc:  Adjust declarations.

2001-12-09  Benjamin Kosnik  <bkoz@redhat.com>
	    Philip Martin <pmartin@uklinux.net>
	
	* include/bits/locale_facets.h (__num_base::_S_scale_hex): Add.
	(__num_base::_S_scale_oct): Add.
	* include/bits/locale_facets.tcc (_M_extract_int): Use them.
	* src/locale.cc: Add definitions.
	* testsuite/27_io/istream_extractor_arith.cc (main): Call test13.

	* testsuite/testsuite_hooks.h: Remove duplicate VERIFY define.
	
2001-12-07  Nathan Myers  <ncm@cantrip.org>
	    Loren Rittle <ljrittle@acm.org>

	libstdc++/5037
	* config/cpu/sparc/sparc32/bits/atomicity.h
	(struct __Atomicity_lock<__inst>): Add.
	(__Atomicity_lock<__inst>::_S_atomicity_lock): Add.
	(__exchange_and_add): Use __Atomicity_lock<0>::_S_atomicity_lock
	instead of lock local to static function.
	(__atomic_add): Likewise.

2001-12-07  Phil Edwards  <pme@gcc.gnu.org>

	* src/globals.cc:  Remove __GTHREADS guard.

2001-12-07  Paolo Carlini  <pcarlini@unitus.it>
        
	* include/bits/locale_facets.tcc (num_put::_M_convert_float):
	Extend comment, reduce __cs_size for non-fixed outputs.

2001-12-07  Paolo Carlini  <pcarlini@unitus.it>
