@@ -74,15 +74,3 @@
       }
     return __high;
   }
-
-
-
-
-
-
-
-
-
-
-
-
